# A01794692_A4-2

./: README.md  pyproject.toml
ComputeStatistics/: README.md
ComputeStatistics/data/: StatisticsResults.txt
ComputeStatistics/pylint_reports/: pylint_report_20250204_201740.txt  pylint_report_20250204_202004.txt  pylint_report_20250204_204531.txt  pylint_report_20250204_204651.txt  pylint_report_20250204_205325.txt  pylint_report_20250204_205444.txt  pylint_report_20250204_205553.txt  pylint_report_20250204_205730.txt
ComputeStatistics/src/: compute_statistics.py  main.py
ComputeStatistics/src/utils/: file_processor.py
ComputeStatistics/tests/: test_main.py
Conslusion/: A01794692_A4.2.docx
Converter/data/: ConvertionResults.txt
Converter/pylint_reports/: pylint_report_20250204_214724.txt  pylint_report_20250204_215029.txt  pylint_report_20250204_215127.txt  pylint_report_20250204_215306.txt  pylint_report_20250204_215436.txt  pylint_report_20250204_215610.txt  pylint_report_20250204_215738.txt
Converter/src/: convert_numbers.py
Converter/src/utils/: file_processor.py  generate_test_file.py  run_pytlint.py
Converter/tests/: test_main.py
CountWords/data/: WordCountResults.txt  test_file.txt  test_file2.txt
CountWords/pylint_reports/: pylint_report_20250204_223926.txt  pylint_report_20250204_224114.txt  pylint_report_20250204_224232.txt  pylint_report_20250204_224334.txt  pylint_report_20250204_224405.txt  pylint_report_20250204_224512.txt
CountWords/src/: count_words.py
CountWords/src/utils/: run_pytlint.py  (+1 more)
CountWords/tests/: test_main.py
