[tool.poetry]
name = "a01794692-a4-2"
version = "0.1.0"
description = ""
authors = ["Edwin Hernandez <edwin.hdez@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^3.3.4"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
